talos/monitoring/grafana/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-grafana-external-ip
spec:
  ports:
  - name: grafana
    port: 80
    protocol: TCP
    targetPort: 30037
  clusterIP: None
  type: ClusterIP

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas-grafana-external-ip-1
  labels:
    kubernetes.io/service-name: truenas-grafana-external-ip
addressType: IPv4
ports:
  - name: grafana
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.0.1.14"
    ports:
      - "30037"
