talos/monitoring/grafana/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: truenas-grafana-external
#   annotations:
#     external-dns.alpha.kubernetes.io/target: 10.0.1.13
#   #   nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: grafana.asandov.local
#     http:
#       paths:
#       - path: /
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: truenas-grafana-external-ip
#             port:
#               number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.1.13
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" #important
spec:
  rules:
  - host: grafana.asandov.local # eg external-service.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-truenas
            port:
              number: 30037
